# OpenECS

./: Cargo.toml  README.md  STANDARD.md
.github/workflows/: ci.yml
SPEC/: CHANGELOG.md  OpenECS-v1.0.md
SPEC/schemas/: codec-manifest-v1.json  corpus-manifest-v1.json  ecs-report-v1.json  ecs-submission-v1.json
bench/ECS-Bench-v1/: ECS-Bench-v1.toml  README.md  fetch.sh  records.txt
corpora/: README.md  ecs-smoke.toml
corpora/smoke/: synthetic_a.edf  synthetic_b.edf  synthetic_c.edf
docs/: OpenECS_Paper.bib  OpenECS_Paper.md
examples/: gen_smoke_corpus.rs
src/: adapter.rs  adapters_external.rs  bands.rs  charts.rs  corpus.rs  edf.rs  harness.rs  levels.rs  lib.rs  manifest.rs  metrics.rs  report.rs  report_html.rs  stats.rs  subprocess.rs  suites.rs  term.rs
tests/: bench_cli.rs  corpus_integrity.rs  ecs_gate.rs  external_adapter.rs  metrics_parity.rs  spec_thresholds.rs  submission_golden.rs
tests/golden/: metrics_parity.json  submission_v1.json
