[package]
name = "eeg-codec-standard"
version = "0.9.0"
edition = "2021"
rust-version = "1.74"
license = "GPL-3.0-or-later"
description = "OpenECS — a universal, vendor-neutral Open EEG Codec Standard: grade any EEG codec (any language, via a file-based contract) against a hash-pinned corpus into one comparable verdict."
repository = "https://github.com/Quitetall/OpenECS"
homepage = "https://github.com/Quitetall/OpenECS"
documentation = "https://docs.rs/eeg-codec-standard"
readme = "STANDARD.md"
keywords = ["eeg", "compression", "benchmark", "codec", "biomedical"]
categories = ["science", "compression", "command-line-utilities"]

# The crate (package) is `eeg-codec-standard`; the library is `eeg_codec_standard`
# (so downstream writes `use eeg_codec_standard::...`); the reference CLI is
# `openecs`. The brand/standard is OpenECS — the Open EEG Codec Standard.
[lib]
name = "eeg_codec_standard"
path = "src/lib.rs"

[[bin]]
name = "openecs"
path = "src/bin/openecs.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# flate2 with default features = pure-Rust miniz_oxide backend (NO system zlib).
# Used by the gzip reference adapter so CI has no system dependency.
flate2 = "1"
# Pure-Rust TOML parser for the codec/corpus manifests (host-side config only).
toml = "0.8"
# Pure-Rust SHA-256 for corpus-file integrity pinning (host-side only).
sha2 = "0.10"
# Pure-Rust data parallelism for corpus grading (host-side driver only — the
# grading metric core stays dependency-light).
rayon = "1"

# ── Developer-experience layer (CLI / bench / report only; never pulled into
#    the metric/grade core: metrics.rs, bands.rs, levels.rs). ──
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
statrs = "0.17"
rand = "0.8"
plotters = { version = "0.3", default-features = false, features = [
    "svg_backend", "line_series", "point_series", "histogram", "area_series",
] }
textplots = "0.8"

# Optional zstd reference adapter — NOT enabled by default to keep CI sysdep-free.
zstd = { version = "0.13", optional = true }

[features]
default = []
zstd = ["dep:zstd"]

# Standalone workspace root: OpenECS is its own repo, decoupled from the parent
# LamQuant meta-workspace (which lists it under `exclude`).
[workspace]
